[package]
name = "speng-0980-fix"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "create_profile"
path = "src/main.rs"

[build-dependencies]
bindgen = "0.66.1"

[dependencies]
gag = "1.0.0"
widestring = "1.0.2"
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_SystemServices",
] }
